--- a/package.json
+++ b/package.json
@@ -5,12 +5,18 @@
   "main": "index.js",
   "scripts": {
     "sass": "sass --watch sass/main.scss:css/style.css",
-    "live-server": "live-server",
-    "start": "npm-run-all --parallel sass live-server"
+    "devserver": "live-server",
+    "start": "npm-run-all --parallel devserver sass",
+
+    "concat-css": "npx concat -o css/style.concat.css css/icon-font.css css/style.css css/style.comp.css",
+    "prefix-css": "postcss --use autoprefixer -b 'last 10 versions' css/style.concat.css -o css/style.prefix.css",
+    "compress-css": "sass css/style.prefix.css css/style.css --style compressed",
+    "build-css": "npm-run-all sass concat-css prefix-css compress-css"
+
   },
   "repository": {
     "type": "git",
-    "url": "https://github.com/YourUsername/natours.git"
+    "url": "https://github.com/BlockJakub/natours.git"
   },
   "keywords": [
     "travel",
