--- a/package.json
+++ b/package.json
@@ -4,15 +4,13 @@
   "description": "Landing page for Natours - A project from Jonas Schmedtmann's Udemy course.",
   "main": "index.js",
   "scripts": {
+    "start": "npm-run-all --parallel devserver sass",
+    "build": "npm-run-all sass concat-css prefix-css compress-css",
     "sass": "sass --watch sass/main.scss:css/style.css",
     "devserver": "live-server",
-    "start": "npm-run-all --parallel devserver sass",
-
     "concat-css": "npx concat -o css/style.concat.css css/icon-font.css css/style.css css/style.comp.css",
     "prefix-css": "postcss --use autoprefixer -b 'last 10 versions' css/style.concat.css -o css/style.prefix.css",
-    "compress-css": "sass css/style.prefix.css css/style.css --style compressed",
-    "build-css": "npm-run-all sass concat-css prefix-css compress-css"
-
+    "compress-css": "sass css/style.prefix.css css/style.css --style compressed"
   },
   "repository": {
     "type": "git",
@@ -30,7 +28,6 @@
   "devDependencies": {
     "autoprefixer": "^10.4.20",
     "concat": "^1.0.3",
-    "node-sass": "^9.0.0",
     "npm-run-all": "^4.1.5",
     "postcss-cli": "^11.0.0",
     "sass": "^1.85.1"
