--- a/package.json
+++ b/package.json
@@ -31,5 +31,9 @@
     "npm-run-all": "^4.1.5",
     "postcss-cli": "^11.0.0",
     "sass": "^1.85.1"
+  },
+  "dependencies": {
+    "body-parser": "^2.2.0",
+    "express": "^5.1.0"
   }
 }
